Fix #2; move meeting links to wrap date

--- a/assets/css/_style.scss
+++ b/assets/css/_style.scss
@@ -66,9 +66,6 @@ nav {
             text-decoration: none;
             background-color: transparent;
           }
-          &.external:after {
-            content: "⇗";
-          }
         }
       }
     }
